@@ -1,5 +1,13 @@
 2005-02-01  Mark McLoughlin  <mark@skynet.ie>
 
+	* lib/protosession.py: launch the admin tool an
+	arbtrary 5 seconds after starting the session.
+	
+	* lib/userprofile.py: allow the delegate not to
+	emit any changes of its own.
+
+2005-02-01  Mark McLoughlin  <mark@skynet.ie>
+
 	* lib/protosession.py: open the dummy X connection
 	on the right display.
 
